created the retailers or flower shops and started adding data of the distributors

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <section class="flowerList">
 
         </section>
+        <section class="retailerList">
+
+        </section>
     </main>
     <script type="module" src="./scripts/main.js"></script>
 </body>
